/*
 *     Copyright 2020 The Dragonfly Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package manager;

import "pkg/rpc/base/base.proto";

option go_package = "github.com/dragonflyoss/Dragonfly2/pkg/rpc/manager";

message NavigatorRequest{
  ClientHost client_host = 1;
  string host_tag = 2; // client tag, json format: {vpcId:xxx,sn:xxx,...}
}

message ClientHost{
  string ip = 1;
  string host_name = 2;
  string security_domain = 3; // security isolation domain for network
  string location = 4; // area|country|province|city|...
  string idc = 5;
  string switch = 6;
}

message SchedulerHosts{
  base.ResponseState state = 1;
  repeated string addrs = 2; // ip:port
  ClientHost client_host = 3;
}

message CdnHosts{
  base.ResponseState state = 1;
  repeated string addrs = 2; // ip:port
  ClientHost client_host = 3;
}

service Manager{
  // get scheduler server list according to client info
  rpc GetSchedulerHosts(NavigatorRequest)returns(SchedulerHosts){}
  // sync cdn server list according to client info
  rpc SyncCdnHosts(NavigatorRequest)returns(stream CdnHosts){}
}
